--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+    background-color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
