--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: aqua;
+    background-color: rgb(140, 34, 34);
     font-family: Arial, Helvetica, sans-serif;
 }
 
