--- a/style.css
+++ b/style.css
@@ -49,9 +49,28 @@ section::after {
 /* Style the footer */
 footer {
   background-color: #777;
-  padding: 10px;
+  /* padding: 10px; */
   text-align: center;
   color: white;
+  display: flex;
+}
+.footer_left {
+  background-color: #777;
+  padding: 10px;
+  width: 50%;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  border: 1px solid red;
+
+  
+}
+.footer_right {
+  background-color: #777;
+  padding: 10px;
+  width: 50%;
+  text-align: center;
+  border: 1px solid blue;
+  color: rgb(255, 255, 255);
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
